fixed an issue and updated notes